; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/fts3/extr_fts3_write.c_fts3IncrmergeOutputIdx.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/fts3/extr_fts3_write.c_fts3IncrmergeOutputIdx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SQL_NEXT_SEGMENT_INDEX = common dso_local global i32 0, align 4
@SQLITE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i32*)* @fts3IncrmergeOutputIdx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fts3IncrmergeOutputIdx(i32* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  store i32* null, i32** %8, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* @SQL_NEXT_SEGMENT_INDEX, align 4
  %11 = call i32 @fts3SqlStmt(i32* %9, i32 %10, i32** %8, i32 0)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @SQLITE_OK, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %27

15:                                               ; preds = %3
  %16 = load i32*, i32** %8, align 8
  %17 = load i64, i64* %5, align 8
  %18 = add nsw i64 %17, 1
  %19 = call i32 @sqlite3_bind_int64(i32* %16, i32 1, i64 %18)
  %20 = load i32*, i32** %8, align 8
  %21 = call i32 @sqlite3_step(i32* %20)
  %22 = load i32*, i32** %8, align 8
  %23 = call i32 @sqlite3_column_int(i32* %22, i32 0)
  %24 = load i32*, i32** %6, align 8
  store i32 %23, i32* %24, align 4
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @sqlite3_reset(i32* %25)
  store i32 %26, i32* %7, align 4
  br label %27

27:                                               ; preds = %15, %3
  %28 = load i32, i32* %7, align 4
  ret i32 %28
}

declare dso_local i32 @fts3SqlStmt(i32*, i32, i32**, i32) #1

declare dso_local i32 @sqlite3_bind_int64(i32*, i32, i64) #1

declare dso_local i32 @sqlite3_step(i32*) #1

declare dso_local i32 @sqlite3_column_int(i32*, i32) #1

declare dso_local i32 @sqlite3_reset(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
